Allow text to wrap on extra-wide buttons. Fixes #357.

--- a/frontend/sass/styles.scss
+++ b/frontend/sass/styles.scss
@@ -161,9 +161,16 @@ input:focus + .jf-checkbox-symbol {
     height: 300px;
 }
 
-.jf-is-extra-wide {
+.button.jf-is-extra-wide {
     padding-left: 2em;
     padding-right: 2em;
+
+    // It's entirely possible that the button's text
+    // may make it too wide for some mobile screens, so
+    // this overrides Bulma's default button styling
+    // to allow the text to wrap.
+    white-space: normal;
+    height: auto;
 }
 
 // A class used around groups of two buttons to
